--- a/source/css/_layout/search.styl
+++ b/source/css/_layout/search.styl
@@ -12,7 +12,7 @@
     padding: 1rem;
     width: 40rem;
     background: rgba(0, 0, 0, 0.9);
-    box-shadow: 0 0 2rem rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 2rem $color-border-shadow;
     border-radius: 4px;
 
     &-header {
